--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@microsoft/signalr": "^7.0.11",
     "@types/google-one-tap": "^1.2.2",
     "google-one-tap": "^1.0.6",
     "ng-angular-popup": "^0.4.7",
